--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,11 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+.gradle
+/local.properties
+.idea/
+.DS_Store
+build/
+/AndroidSimpleLib/app/
+/AndroidSimpleLib/gradle/
